--- a/styles/header.css
+++ b/styles/header.css
@@ -19,6 +19,8 @@ header .container {
 }
 
 #profile img {
+    width: 176px;
+    height: 176px;
     object-fit: cover;
     border-radius: 50%;
 }
